# alumina-firmware

./: Cargo.toml  build.rs  readme.md  sdkconfig.defaults
.cargo/: config.toml
.github/: FUNDING.yml
src/: commandbuffer.rs  interrupts.rs  main.rs  pins.rs  planner.rs  serial.rs  wifi.rs
src/boards/: esp32drive.rs  mks_tinybee.rs  mod.rs
src/devices/: esp32cam.rs  esp32drive.rs  mks_tinybee.rs  mod.rs  xprov5.rs
src/peripherals/: mod.rs
ui/: index.html
