[package]
name = "alumina-firmware"
version = "0.1.0"
authors = [
    "Timothy Schmidt <timschmidt@gmail.com>",
]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = "symbols"
debug-assertions = false
overflow-checks = false
panic = "abort"
incremental = false

[profile.dev]
debug = true

[features]
default = ["native"]
native = ["esp-idf-sys/native"]

[dependencies]
anyhow = { version = "=1.0.69", default-features = false }
embedded-svc = { version = "=0.24.0", default-features = false }
esp-idf-hal = { version = "=0.40.1", default-features = false }
esp-idf-svc = { version = "0.45.0", features = ["experimental", "alloc"] }
esp-idf-sys = { version = "=0.32.1", features = ["binstart"] }
shtcx = { version = "=0.11.0", default-features = false }
httparse = { version = "1.5.1", default-features = false }
stepgen = { version = "0.1.3", default-features = false }
log = { version = "0.4.27", default-features = false }

[build-dependencies]
anyhow = "=1.0.69"
embuild = "=0.31.1"
