[package]
name = "alumina-firmware"
version = "0.1.0"
authors = [
    "Timothy Schmidt <timschmidt@gmail.com>",
]
edition = "2024"
resolver = "2"
description = "ESP32 firmware prototype for the Alumina CAD/CAM and machine-control system"
license = "MIT"
repository = "https://github.com/timschmidt/alumina-firmware"
readme = "readme.md"
keywords = ["esp32", "firmware", "cnc", "cad", "cam"]
categories = ["embedded", "hardware-support"]
publish = false

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = "symbols"
debug-assertions = false
overflow-checks = false
panic = "abort"
incremental = false

[profile.dev]
debug = true

[features]
default = ["native"]
native = ["esp-idf-sys/native"]
device_mks_tinybee = []
device_esp32drive = []
device_esp32cam = []
device_xprov5 = []

[dependencies]
anyhow = { version = "1" }
embedded-svc = { version = "0.28", default-features = false }
esp-idf-hal = { version = "0.45.2", default-features = false }
esp-idf-svc = { version = "0.51.0", features = ["experimental", "alloc"] }
esp-idf-sys = { version = "0.36.1", features = ["binstart"] }
log = { version = "0.4", default-features = false }

[build-dependencies]
anyhow = "1"
embuild = "0.33"
